# serializer version: 1
# name: test_management_command_default_run
  list([
    'Start archiving employee records',
    'Found 1 archivable employee record(s)',
    'Archiving employee_record.pk=42',
    '0/1 employee record(s) were archived',
  ])
# ---
# name: test_management_command_wet_run
  list([
    'Start archiving employee records',
    'Found 1 archivable employee record(s)',
    'Archiving employee_record.pk=42',
    '1/1 employee record(s) were archived',
  ])
# ---
